creacion del endpoint para el update del producto y su documentacion
